--- a/pages/page_1.html
+++ b/pages/page_1.html
@@ -25,7 +25,7 @@
             FAKULTAS PENDIDIKAN MATEMATIKA DAN ILMU PENGETAHUAN ALAM
         </div>
         <div class="text-lg font-bold">
-            UNIVERSITAS PENDIDIKAN INDONESIA
+            UNIVERSITAS PENDIDIKAN INDONESIA RAYA
         </div>
     </div>
 </div>
